--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://financetracker_66ik_user:DquiLudjfr7Bz1U6BuV1nxBRB0A9naqm@dpg-d0nugg7diees739ff81g-a.singapore-postgres.render.com/financetracker_66ik
+DATABASE_URL=postgresql://financetracker_66ik_user:DquiLudjfr7Bz1U6BuV1nxBRB0A9naqm@dpg-d0nugg7diees739ff81g-a.singapore-postgres.render.com:5432/financetracker_66ik
